* add property/config to fallback to legacy loading via JRubyClassloader * add property/config to switch back to legacy loading * use uri:classloader: protocol for setting jruby.home * give preference to RubyInstanceConfig.class.getClassLoader instead of Thread.currentThread.contextClassLoader